--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -31,7 +31,7 @@
 							<% if (message) { %>
 								<h3><%= message %></h3>
 							<% } %>
-							<form method="post">
+							<form method="post"lear>
 								<div class="mdl-textfield mdl-js-textfield">
 									<input class="mdl-textfield__input" type="text" name="username" placeholder="Username">
 								</div>
