--- a/Views/admin/account.ejs
+++ b/Views/admin/account.ejs
@@ -4,11 +4,9 @@
         <meta charset="UTF-8">
         <title>Account | Chess Tournament</title>
 
-        <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
-        <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400" rel="stylesheet">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-light_blue.min.css" />
+		<link rel="stylesheet" href="./material.min.css">
+		<script src="./material.min.js"></script>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-tabs">
