--- a/Views/schedule.ejs
+++ b/Views/schedule.ejs
@@ -25,7 +25,7 @@
                 <section class="mdl-layout__tab-panel is-active" id="ScheduleMainTab">
                     <div class="page-content">
                         <div id="ScheduleMainDiv">
-							<p>This is the schedule.</p>
+							<p><iframe src="https://calendar.google.com/calendar/embed?src=lcmail.lcsc.edu_83kmtajte7ihuj03svcp3ju4ig%40group.calendar.google.com&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
                         </div>
                     </div>
                 </section>
