--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="./material.min.css">
 		<script src="./material.min.js"></script>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-tabs">
