--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
-        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-tabs">
+        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
             <header class="mdl-layout__header">
 
