--- a/Views/admin/index.ejs
+++ b/Views/admin/index.ejs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Admin | Chess Tournament</title>
 
-		<link rel="stylesheet" href="../material.min.css">
+		<link rel="stylesheet" href="../materialAdmin.min.css">
 		<script src="../material.min.js"></script>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
