Modified the /admin/teams page to show an error if one exists.\n\nAdded a redirect to enter teams if trying to access schedule or score before teams are entered.

--- a/Views/admin/teams.ejs
+++ b/Views/admin/teams.ejs
@@ -25,6 +25,9 @@
 
 			<main class="mdl-layout__content">
 				<section class="mdl-layout__tab-panel is-active" id="TeamsAdminTab">
+          <% if (message) { %>
+            <h3><%= message %></h3>
+          <% } %>
 				</section>
 			</main>
         </div>
