--- a/Views/schedule.ejs
+++ b/Views/schedule.ejs
@@ -9,10 +9,9 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body>
-	background-image: url(https://www.google.com/imgres?imgurl=http%3A%2F%2Fi.ebayimg.com%2F00%2Fs%2FMzQ2WDQ5OQ%3D%3D%2Fz%2FLvAAAOxyOlhSsST2%2F%24_3.JPG%3Fset_id%3D2&imgrefurl=http%3A%2F%2Fwww.ebay.com%2Fbhp%2Fchess-board&docid=-joapUrDjFQnCM&tbnid=M5C58MZx_gWzFM%3A&vet=1&w=499&h=346&bih=759&biw=1536&ved=0ahUKEwjojqaqisXTAhVO0WMKHdpZAX8QMwhhKAAwAA&iact=c&ictx=1);
-	background-repeat: no-repeat;
-	background-attachment: fixed;
+    <body style="background-image: url(http://i.ebayimg.com/00/s/MzQ2WDQ5OQ==/z/LvAAAOxyOlhSsST2/$_3.JPG?set_id=2);
+		background-repeat: no-repeat;
+		background-attachment: fixed;">
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
             <header class="mdl-layout__header">
