--- a/Views/schedule.ejs
+++ b/Views/schedule.ejs
@@ -11,7 +11,8 @@
     </head>
     <body style="background-image: url(http://i.ebayimg.com/00/s/MzQ2WDQ5OQ==/z/LvAAAOxyOlhSsST2/$_3.JPG?set_id=2);
 		background-repeat: no-repeat;
-		background-attachment: fixed;">
+		background-attachment: fixed;
+		background-position: center center;">
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
             <header class="mdl-layout__header">
