Added numBox for NumTeams
Still requires javascript to add text boxes for each team requested

--- a/Views/admin/teams.ejs
+++ b/Views/admin/teams.ejs
@@ -29,6 +29,12 @@
             <h3><%= message %></h3>
           <% } %>
 				</section>
+			<p>Number of Teams</p>
+			<form>
+				Number of Teams
+				<input type="number" name="TeamNum" min="2" max="10">
+			</form><br>
+			<button type="button">Submit</button>
 			</main>
         </div>
     </body>
