--- a/Views/admin/teams.ejs
+++ b/Views/admin/teams.ejs
@@ -30,7 +30,7 @@
           <% } %>
 				</section>
 			<form>
-				Number of Teams
+				Number of Teams(2 - 10)
 				<input type="number" name="TeamNum" min="2" max="10">
 			</form><br>
 			<button type="button">Submit</button>
