--- a/Views/admin/teams.ejs
+++ b/Views/admin/teams.ejs
@@ -31,9 +31,13 @@
 				</section>
 			<form>
 				Number of Teams(2 - 10)
-				<input type="number" name="TeamNum" min="2" max="10">
-			</form><br>
-			<button type="button">Submit</button>
+				<input type="number" name="TeamNum" min="2" max="10"><br>
+				Team #1: <input type="text" name="Team1"><br>
+				Team #2: <input type="text" name="Team2"><br>
+				<!-- Need to add javascript for more inputs when needed -->
+				<button type="button">Submit</button>
+			</form>
+			
 			</main>
         </div>
     </body>
