--- a/Views/admin/teams.ejs
+++ b/Views/admin/teams.ejs
@@ -31,7 +31,7 @@
 				</section>
 			<form>
 				Number of Teams(2 - 10)
-				<input type="number" name="TeamNum" min="2" max="10"><br>
+				<input type="number" name="TeamNum" min="2" max="10" value="2"><br>
 				Team #1: <input type="text" name="Team1"><br>
 				Team #2: <input type="text" name="Team2"><br>
 				<!-- Need to add javascript for more inputs when needed -->
