--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body style="background-image: url(Chessboard.jpeg);
+    <body style="background-image: url(./chessboard.jpeg);
 		background-repeat: no-repeat;
 		background-attachment: fixed;
 		background-position: center center;">
