--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -37,7 +37,7 @@
 								<div class="mdl-textfield mdl-js-textfield">
 									<input class="mdl-textfield__input" type="password" name="password" placeholder="Password">
 								</div>
-								<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit">
+								<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Login">
 							</form>
                         </div>
                     </div>
