Changed button from "Login" to "Confirm"

--- a/Views/admin/account.ejs
+++ b/Views/admin/account.ejs
@@ -36,7 +36,7 @@
 					<div class="mdl-textfield mdl-js-textfield">
 						<input class="mdl-textfield__input" type="password" name="passwordC" placeholder="Confirm Password">
 					</div><br>
-					<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Login">
+					<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Confirm">
 				</form>
 			</main>
         </div>
