Created Form for new Accounts
Needs to not show when not on admin account

--- a/Views/admin/account.ejs
+++ b/Views/admin/account.ejs
@@ -26,7 +26,21 @@
 			<main class="mdl-layout__content">
 				<section class="mdl-layout__tab-panel is-active" id="AccountAdminTab">
 				</section>
-				<form method="post"lear>
+				<h2>Change this Account</h2>
+				<form>
+					<div class="mdl-textfield mdl-js-textfield">
+						<input class="mdl-textfield__input" type="text" name="username" placeholder="New Username">
+					</div><br>
+					<div class="mdl-textfield mdl-js-textfield">
+						<input class="mdl-textfield__input" type="password" name="password" placeholder="New Password">
+					</div><br>
+					<div class="mdl-textfield mdl-js-textfield">
+						<input class="mdl-textfield__input" type="password" name="passwordC" placeholder="Confirm Password">
+					</div><br>
+					<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Confirm">
+				</form>
+				<h2>Create New Account</h2>
+				<form>
 					<div class="mdl-textfield mdl-js-textfield">
 						<input class="mdl-textfield__input" type="text" name="username" placeholder="New Username">
 					</div><br>
