why do i always have to make a comment?

--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -9,10 +9,11 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body style="background-image: url(./chessboard.jpeg);
+    <body style="background-image: url(./chessboard.jpg);
 		background-repeat: no-repeat;
 		background-attachment: fixed;
-		background-position: center center;">
+		background-position: center center;
+		background-size:cover;">
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
             <header class="mdl-layout__header">
