Removed 'Enter username and password'\nOnly show 'Add Account' if you are logged in with 'OWNER' account

--- a/Views/admin/account.ejs
+++ b/Views/admin/account.ejs
@@ -27,7 +27,7 @@
 				<section class="mdl-layout__tab-panel is-active" id="AccountAdminTab">
 				</section>
 				<h2>Change this Account</h2>
-				<form>
+				<form method="post" action="/admin/modifyaccount">
 					<div class="mdl-textfield mdl-js-textfield">
 						<input class="mdl-textfield__input" type="text" name="username" placeholder="New Username">
 					</div><br>
@@ -39,19 +39,21 @@
 					</div><br>
 					<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Confirm">
 				</form>
-				<h2>Create New Account</h2>
-				<form>
-					<div class="mdl-textfield mdl-js-textfield">
-						<input class="mdl-textfield__input" type="text" name="username" placeholder="New Username">
-					</div><br>
-					<div class="mdl-textfield mdl-js-textfield">
-						<input class="mdl-textfield__input" type="password" name="password" placeholder="New Password">
-					</div><br>
-					<div class="mdl-textfield mdl-js-textfield">
-						<input class="mdl-textfield__input" type="password" name="passwordC" placeholder="Confirm Password">
-					</div><br>
-					<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Confirm">
-				</form>
+				<% if (isOwner) { %>
+					<h2>Create New Account</h2>
+					 <form method="post" action="/admin/createaccount">
+						 <div class="mdl-textfield mdl-js-textfield">
+							 <input class="mdl-textfield__input" type="text" name="username" placeholder="New Username">
+						 </div><br>
+						 <div class="mdl-textfield mdl-js-textfield">
+							 <input class="mdl-textfield__input" type="password" name="password" placeholder="New Password">
+						 </div><br>
+						 <div class="mdl-textfield mdl-js-textfield">
+							 <input class="mdl-textfield__input" type="password" name="passwordC" placeholder="Confirm Password">
+						 </div><br>
+						 <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Confirm">
+					 </form>
+				<% } %>
 			</main>
         </div>
     </body>
