--- a/Views/schedule.ejs
+++ b/Views/schedule.ejs
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body style="background-image: url(./banner.jpg);
+    <body style="background-image: url(./banner.png);
 		background-repeat: no-repeat;
 		background-attachment: fixed;
 		background-position: center bottom;
