--- a/Views/schedule.ejs
+++ b/Views/schedule.ejs
@@ -12,8 +12,7 @@
     <body style="background-image: url(./banner.png);
 		background-repeat: no-repeat;
 		background-attachment: fixed;
-		background-position: center bottom;
-		background-size:cover;">
+		background-position: center bottom;">
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
             <header class="mdl-layout__header">
