--- a/Views/scores.ejs
+++ b/Views/scores.ejs
@@ -9,11 +9,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body style="background-image: url(./chessboard.jpg);
-		background-repeat: no-repeat;
-		background-attachment: fixed;
-		background-position: center center;
-		background-size:cover;">
+    <body>
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
             <header class="mdl-layout__header">
@@ -36,7 +32,7 @@
 									<thead>
 										<tr>
 											<th class="mdl-data-table__cell--non-numeric"><%= teams[team].Name %></th>
-											<th>Score - <%= teams[team].Score %></th>
+											<th>Score ~ <%= teams[team].Score %></th>
 										</tr>
 									</thead>
 									<tbody>
