--- a/Views/schedule.ejs
+++ b/Views/schedule.ejs
@@ -9,10 +9,10 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body style="background-image: url(./banner.png);
+    <body style="background-image: url(./chessboard.jpg);
 		background-repeat: no-repeat;
 		background-attachment: fixed;
-		background-position: center bottom;">
+		background-position: center center;">
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
             <header class="mdl-layout__header">
