--- a/Views/schedule.ejs
+++ b/Views/schedule.ejs
@@ -12,7 +12,8 @@
     <body style="background-image: url(./chessboard.jpg);
 		background-repeat: no-repeat;
 		background-attachment: fixed;
-		background-position: center center;">
+		background-position: center center;
+		background-size:cover;">
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
             <header class="mdl-layout__header">
