Added waring to add teams button

--- a/Views/admin/teams.ejs
+++ b/Views/admin/teams.ejs
@@ -60,6 +60,7 @@
 						});
 					</script>
 					<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Add Teams">
+					<h4>*WARNING* Clicking this box will automatically erase the current running tournament</h4>
 				</form>
 			</main>
     	</div>
