Changing test stuff

--- a/Views/schedule.ejs
+++ b/Views/schedule.ejs
@@ -26,14 +26,14 @@
 
             </header>
 
-            <main class="mdl-layout__content" style = "background-color= rgba(0, 0, 0, .54)">
+            <main class="mdl-layout__content">
                 <section class="mdl-layout__tab-panel is-active" id="ScheduleMainTab">
                     <div class="page-content">
                         <div id="ScheduleMainDiv">
 							<h2> Week 1</h2>
 							<h3 style="text-indent: 3em;"> 10:00 AM </h3>
-							<p style ="text-indent: 6em;"> Team1 VS Team2 </p>
-							<p style ="text-indent: 6em;"> Team3 VS Team4</p>
+							<p style ="text-indent: 12em;"> Team1 VS Team2 </p>
+							<p style ="text-indent: 12em;"> Team3 VS Team4</p>
                         </div>
                     </div>
                 </section>
