Fixed issues occored due to new CSS

--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -35,10 +35,10 @@
 							<% } %>
 							<form method="post"lear>
 								<div class="mdl-textfield mdl-js-textfield">
-									<input class="mdl-textfield__input" type="text" name="username" placeholder="Username">
+									<input class="mdl-textfield__input" type="text" name="username" placeholder="Username" style="background-color = white;">
 								</div>
 								<div class="mdl-textfield mdl-js-textfield">
-									<input class="mdl-textfield__input" type="password" name="password" placeholder="Password">
+									<input class="mdl-textfield__input" type="password" name="password" placeholder="Password" style="background-color = white;">
 								</div>
 								<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Login">
 							</form>
