Made example of what it should look like w/ javascript
Schedule looks a little iffy though... going to be working on that...

--- a/Views/admin/schedule.ejs
+++ b/Views/admin/schedule.ejs
@@ -26,6 +26,13 @@
 			<main class="mdl-layout__content">
 				<section class="mdl-layout__tab-panel is-active" id="ScheduleAdminTab">
 				</section>
+				<h2> Week 1</h2>
+				<h3 style="text-indent: 3em;"> 10:00 AM </h3>
+				<p style ="text-indent: 12em;"> Team1 VS Team2 </p>
+				<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Rescedule">
+				<br><p style ="text-indent: 12em;"> Team3 VS Team4</p>
+				<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Rescedule">
+				<br>
 			</main>
         </div>
     </body>
