--- a/Views/admin/scores.ejs
+++ b/Views/admin/scores.ejs
@@ -26,6 +26,17 @@
 			<main class="mdl-layout__content">
 				<section class="mdl-layout__tab-panel is-active" id="ScoresAdminTab">
 				</section>
+				<h2> Week 1</h2>
+				<h3 style="text-indent: 3em;"> 10:00 AM </h3>
+				<form>
+					<form action="" style="text-indent: 12em;">
+						<input type="radio" name="game000" value="Team1" > Team1
+						<input type="radio" name="game000" value="Team2"> Team2
+						<input type="radio" name="game000" value="Draw"> Draw
+						<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Confirm">
+					</form><br>
+				<br><input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Confirm All">
+				</form>
 			</main>
         </div>
     </body>
