--- a/Views/admin/schedule.ejs
+++ b/Views/admin/schedule.ejs
@@ -29,9 +29,9 @@
 				<h2> Week 1</h2>
 				<h3 style="text-indent: 3em;"> 10:00 AM </h3>
 				<p style ="text-indent: 12em;"> Team1 VS Team2 </p>
-				<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Rescedule">
+				<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Rescedule" style="display: inline;">
 				<br><p style ="text-indent: 12em;"> Team3 VS Team4</p>
-				<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Rescedule">
+				<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Rescedule" style="display: inline;">
 				<br>
 			</main>
         </div>
