Added Firebase Authentication instead of hard-coded user/pass\nMade modifying your own password work properly.

--- a/Views/admin/account.ejs
+++ b/Views/admin/account.ejs
@@ -25,35 +25,38 @@
 
 			<main class="mdl-layout__content">
 				<section class="mdl-layout__tab-panel is-active" id="AccountAdminTab">
-				</section>
-				<h2>Change this Account</h2>
-				<form method="post" action="/admin/modifyaccount">
-					<div class="mdl-textfield mdl-js-textfield">
-						<input class="mdl-textfield__input" type="text" name="username" placeholder="New Username">
-					</div><br>
-					<div class="mdl-textfield mdl-js-textfield">
-						<input class="mdl-textfield__input" type="password" name="password" placeholder="New Password">
-					</div><br>
-					<div class="mdl-textfield mdl-js-textfield">
-						<input class="mdl-textfield__input" type="password" name="passwordC" placeholder="Confirm Password">
-					</div><br>
-					<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Confirm">
-				</form>
-				<% if (isOwner) { %>
-					<h2>Create New Account</h2>
-					 <form method="post" action="/admin/createaccount">
-						 <div class="mdl-textfield mdl-js-textfield">
-							 <input class="mdl-textfield__input" type="text" name="username" placeholder="New Username">
-						 </div><br>
-						 <div class="mdl-textfield mdl-js-textfield">
-							 <input class="mdl-textfield__input" type="password" name="password" placeholder="New Password">
-						 </div><br>
-						 <div class="mdl-textfield mdl-js-textfield">
-							 <input class="mdl-textfield__input" type="password" name="passwordC" placeholder="Confirm Password">
-						 </div><br>
-						 <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Confirm">
-					 </form>
+				<% if (message) { %>
+					<h2><%= message %></h2>
 				<% } %>
+				<h2>Change this Account</h2>
+					<form method="post" action="/admin/modifyaccount">
+						<div class="mdl-textfield mdl-js-textfield">
+							<input class="mdl-textfield__input" type="password" name="password" placeholder="New Password">
+						</div><br>
+						<div class="mdl-textfield mdl-js-textfield">
+							<input class="mdl-textfield__input" type="password" name="passwordC" placeholder="Confirm Password">
+						</div><br>
+						<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Confirm">
+					</form>
+					<% if (passFail) { %>
+						<h4>Passwords to not match.</h4>
+					<% } %>
+					<% if (isOwner) { %>
+						<h2>Create New Account</h2>
+						 <form method="post" action="/admin/createaccount">
+							 <div class="mdl-textfield mdl-js-textfield">
+								 <input class="mdl-textfield__input" type="text" name="username" placeholder="New Username">
+							 </div><br>
+							 <div class="mdl-textfield mdl-js-textfield">
+								 <input class="mdl-textfield__input" type="password" name="password" placeholder="New Password">
+							 </div><br>
+							 <div class="mdl-textfield mdl-js-textfield">
+								 <input class="mdl-textfield__input" type="password" name="passwordC" placeholder="Confirm Password">
+							 </div><br>
+							 <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Confirm">
+						 </form>
+					<% } %>
+				</section>
 			</main>
         </div>
     </body>
