--- a/Views/admin/schedule.ejs
+++ b/Views/admin/schedule.ejs
@@ -25,8 +25,22 @@
 
 			<main class="mdl-layout__content">
 				<section class="mdl-layout__tab-panel is-active" id="ScheduleAdminTab">
+					<% if (message) { %>
+						<h2><%= message %></h2>
+					<% } %>
+					<%for (var week in weeks) { %>
+						<h2>Week <%= week %></h2>
+						<% for (var time in weeks[week]) { %>
+							<h3 style="text-indent: 3em;">Time #<%= time %></h3>
+							<% for (var game in weeks[week][time]) { %>
+								<% if (weeks[week][time][game] == null) continue; %>
+								<span><form id="<%= week %><%= time %><%= game %>" method="post" action="/admin/schedule"><input type="hidden" name="id" value="<%= week %><%= time %><%= game %>"><input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Reschedule" style="display: inline;" form="<%= week %><%= time %><%= game %>">   <%= teams[weeks[week][time][game].Black].Name %> vs <%= teams[weeks[week][time][game].White].Name %> </form><br><br></span>
+							<% } %>
+							<hr>
+						<% } %>
+					<% } %>
 				</section>
-				<h2> Week 1</h2>
+				<!--<h2> Week 1</h2>
 				<h3 style="text-indent: 3em;"> 10:00 AM </h3>
 				<p style ="text-indent: 12em;"> Team1 VS Team2 </p>
 				<div style="display: inline;">
@@ -35,7 +49,7 @@
 				<br><p style ="text-indent: 12em;"> Team3 VS Team4</p>
 				<div style="display: inline;">
 				<input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Rescedule" style="display: inline;">
-				<br>
+				<br>-->
 			</main>
         </div>
     </body>
