--- a/Views/schedule.ejs
+++ b/Views/schedule.ejs
@@ -35,6 +35,7 @@
 								<% for (var time in weeks[week]) { %>
 									<h3 style="text-indent: 3em;">Time #<%= time %></h3>
 									<% for (var game in weeks[week][time]) { %>
+										<% if (weeks[week][time][game] == null) continue; %>
 										<p style ="text-indent: 12em;"><%= teams[weeks[week][time][game].Black].Name %> vs <%= teams[weeks[week][time][game].White].Name %></p>
 									<% } %>
 								<% } %>
