--- a/Views/admin/scores.ejs
+++ b/Views/admin/scores.ejs
@@ -35,7 +35,7 @@
 						<% for (var time in weeks[week]) { %>
 							<h3 style="text-indent: 3em;">Time #<%= time %></h3>
 							<% for (var game in weeks[week][time]) { %>
-								<% if (weeks[week][time][game] == null) continue; %>
+								<% if (weeks[week][time][game] == null || weeks[week][time][game].Black == 'BYE' || weeks[week][time][game].White == 'BYE') continue; %>
 								<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="<%= week.toString() + time.toString() + game.toString()%>1">
 									<input type="radio" id="<%= week.toString() + time.toString() + game.toString()%>1" class="mdl-radio__button" name="<%= week.toString() + time.toString() + game.toString()%>" value="1">
 									<span class="mdl-radio__label"><%= teams[weeks[week][time][game].Black].Name %></span>
