Not sure what I changed, but I removed some comments for sure.

--- a/Views/unauthorised.ejs
+++ b/Views/unauthorised.ejs
@@ -23,8 +23,8 @@
             </header>
 			<main class="mdl-layout__content">
 				<div>
-					<h3>You are not authorised to view that page.</h1>
-					<p>Please <a href="/login">Login</a> to continue.</p>
+					<h3 style="color:white">You are not authorised to view that page.</h1>
+					<h4 style="color: white">Please <a href="/login" style="color: white">Login</a> to continue.</p>
 				</div>
 			</main>
         </div>
