James fixed the white bar on the schedule

--- a/Views/schedule.ejs
+++ b/Views/schedule.ejs
@@ -26,7 +26,7 @@
 
             </header>
 
-            <main class="mdl-layout__content">
+            <main class="mdl-layout__content" design="background-color: rgba(0,0,0, .70);">
                 <section class="mdl-layout__tab-panel is-active" id="ScheduleMainTab">
                     <div class="page-content">
                         <div id="ScheduleMainDiv">
